--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
   <meta name="description" content="Sociallgram — Bharat’s own social media platform. Made for Bharat, By Bharat. Coming Soon.">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, sans-serif;
       margin: 0;
       background: #fafafa;
       color: #333;
       text-align: center;
     }
     header {
-      background: linear-gradient(90deg, #ff4e50, #f9d423);
+      background: linear-gradient(90deg, #ff9933, #ffffff, #138808);
       padding: 20px;
     }
     header img {
-      max-height: 60px;
+      max-height: 80px;
     }
     .hero {
       padding: 40px 20px;
     }
     .hero h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
+      font-size: 2.8em;
+      margin-bottom: 15px;
     }
     .hero p {
-      font-size: 1.2em;
-      max-width: 700px;
-      margin: 0 auto 20px;
+      font-size: 1.3em;
+      max-width: 750px;
+      margin: 0 auto 25px;
     }
     .mockup {
       margin: 40px auto;
@@ -44,18 +44,37 @@
     .about {
       background: #fff;
       padding: 40px 20px;
-      max-width: 900px;
+      max-width: 1000px;
       margin: 0 auto;
       border-radius: 10px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      text-align: left;
     }
     .about h2 {
-      font-size: 2em;
+      font-size: 2.2em;
       margin-bottom: 20px;
+      text-align: center;
     }
     .about p {
       font-size: 1.1em;
-      line-height: 1.6;
+      line-height: 1.7;
+      margin-bottom: 20px;
+    }
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+    .feature {
+      background: #f4f4f4;
+      padding: 20px;
+      border-radius: 8px;
+      text-align: center;
+    }
+    .feature h3 {
+      margin-bottom: 10px;
+      color: #ff9933;
     }
     footer {
       background: #222;
@@ -69,34 +88,46 @@
 
   <!-- Header with Logo -->
   <header>
-    <img src="logo.png" alt="Sociallgram Logo">
+    <!-- Placeholder logo (replace logo.png later with your own) -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Emoji_u1f1ee_1f1f3.svg/1200px-Emoji_u1f1ee_1f1f3.svg.png" alt="Sociallgram Logo">
   </header>
 
   <!-- Hero Section -->
   <section class="hero">
     <h1>Coming Soon: Sociallgram</h1>
-    <p>Made for Bharat, By Bharat — A new home for our voices, stories, and culture.</p>
+    <p>Made for Bharat, By Bharat — A platform where our culture shines, our voices are heard, and our data stays home.</p>
   </section>
 
   <!-- Mockup Image -->
   <div class="mockup">
-    <img src="mockup.png" alt="Sociallgram App Preview">
+    <img src="https://via.placeholder.com/800x400?text=Sociallgram+App+Preview" alt="Sociallgram App Preview">
   </div>
 
   <!-- About Section -->
   <section class="about">
     <h2>What is Sociallgram?</h2>
-    <p>
-      Sociallgram is Bharat’s own social media platform — a place where we connect, share, and grow together.  
-      Our mission is to create a safe, vibrant, and inclusive digital space that celebrates our diversity and keeps our data at home.  
-    </p>
-    <p>
-      From sharing your everyday moments to discovering stories from across the nation, Sociallgram is designed to feel familiar yet proudly unique.  
-      Built with modern technology, our platform will give you the tools to express yourself, engage with your community, and explore content that matters to you.  
-    </p>
-    <p>
-      Join the movement. Be part of the future of Bharat’s digital space.
-    </p>
+    <p>Sociallgram is Bharat’s own social media platform — designed to empower our people with a place to connect, share, and grow without depending on foreign platforms. Every like, comment, and post you share stays within our own digital borders, keeping your data secure and close to home.</p>
+    <p>Our vision is to create a safe, vibrant, and inclusive space that celebrates Bharat’s diversity and gives everyone a voice. Whether you want to share your daily life, showcase your talent, or discover inspiring stories from across the country — Sociallgram is built for you.</p>
+    <p>We believe in community, creativity, and cultural pride. By joining Sociallgram, you’re not just using an app — you’re part of a movement to create a digital Bharat we can all be proud of.</p>
+
+    <div class="features">
+      <div class="feature">
+        <h3>🇮🇳 Made in Bharat</h3>
+        <p>100% developed and hosted in Bharat — keeping jobs, innovation, and technology local.</p>
+      </div>
+      <div class="feature">
+        <h3>🔒 Privacy First</h3>
+        <p>Your data belongs to you — always. No unnecessary tracking or selling your information.</p>
+      </div>
+      <div class="feature">
+        <h3>🌍 Connect & Discover</h3>
+        <p>Meet people, join communities, and discover stories from every corner of our nation.</p>
+      </div>
+      <div class="feature">
+        <h3>🎨 Creative Freedom</h3>
+        <p>Share photos, videos, and stories without restrictions on creativity and culture.</p>
+      </div>
+    </div>
   </section>
 
   <!-- Footer -->
