--- a/index.html
+++ b/index.html
@@ -1,139 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sociallgram — Made for Bharat, By Bharat</title>
-  <meta name="description" content="Sociallgram — Bharat’s own social media platform. Made for Bharat, By Bharat. Coming Soon.">
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      margin: 0;
-      background: #fafafa;
-      color: #333;
-      text-align: center;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sociallgram — Made for Bharat, By Bharat</title>
+<style>
+    * {margin: 0; padding: 0; box-sizing: border-box;}
+    body {font-family: Arial, sans-serif; background: #fdfdfd; color: #222; line-height: 1.6;}
     header {
-      background: linear-gradient(90deg, #ff9933, #ffffff, #138808);
-      padding: 20px;
+        background: linear-gradient(135deg, #ff006e, #fbb13c);
+        padding: 20px;
+        text-align: center;
+        color: white;
     }
-    header img {
-      max-height: 80px;
+    header img {width: 80px; margin-bottom: 10px;}
+    header h1 {font-size: 2.5em; margin-bottom: 10px;}
+    header p {font-size: 1.2em;}
+
+    section {padding: 60px 20px; max-width: 1000px; margin: auto;}
+
+    .about, .features, .preview, .cta {
+        margin-bottom: 60px;
     }
-    .hero {
-      padding: 40px 20px;
+    h2 {text-align: center; font-size: 2em; margin-bottom: 20px;}
+    p {text-align: center; max-width: 800px; margin: auto; margin-bottom: 20px;}
+
+    .features-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 20px;
     }
-    .hero h1 {
-      font-size: 2.8em;
-      margin-bottom: 15px;
+    .feature-card {
+        background: white;
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        transition: transform 0.3s;
     }
-    .hero p {
-      font-size: 1.3em;
-      max-width: 750px;
-      margin: 0 auto 25px;
+    .feature-card:hover {
+        transform: translateY(-5px);
     }
-    .mockup {
-      margin: 40px auto;
-      max-width: 800px;
+    .feature-card h3 {margin-bottom: 10px; color: #ff006e;}
+
+    .preview img {
+        width: 100%;
+        max-width: 500px;
+        display: block;
+        margin: auto;
+        border-radius: 12px;
+        box-shadow: 0 4px 20px rgba(0,0,0,0.2);
     }
-    .mockup img {
-      width: 100%;
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+
+    .cta {
+        text-align: center;
+        background: linear-gradient(135deg, #ff006e, #fbb13c);
+        color: white;
+        padding: 40px 20px;
+        border-radius: 12px;
     }
-    .about {
-      background: #fff;
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      text-align: left;
+    .cta a {
+        display: inline-block;
+        background: white;
+        color: #ff006e;
+        padding: 10px 20px;
+        margin-top: 15px;
+        border-radius: 30px;
+        font-weight: bold;
+        text-decoration: none;
     }
-    .about h2 {
-      font-size: 2.2em;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    .about p {
-      font-size: 1.1em;
-      line-height: 1.7;
-      margin-bottom: 20px;
-    }
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .feature {
-      background: #f4f4f4;
-      padding: 20px;
-      border-radius: 8px;
-      text-align: center;
-    }
-    .feature h3 {
-      margin-bottom: 10px;
-      color: #ff9933;
-    }
-    footer {
-      background: #222;
-      color: #fff;
-      padding: 20px;
-      margin-top: 40px;
-    }
-  </style>
+
+    /* Scroll animations */
+    .hidden {opacity: 0; transform: translateY(30px); transition: all 0.6s ease-out;}
+    .show {opacity: 1; transform: translateY(0);}
+</style>
 </head>
 <body>
 
-  <!-- Header with Logo -->
-  <header>
-    <!-- Placeholder logo (replace logo.png later with your own) -->
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Emoji_u1f1ee_1f1f3.svg/1200px-Emoji_u1f1ee_1f1f3.svg.png" alt="Sociallgram Logo">
-  </header>
+<header>
+    <img src="logo.png" alt="Sociallgram Logo">
+    <h1>Sociallgram</h1>
+    <p>Made for Bharat, By Bharat — A new way to connect, share, and inspire.</p>
+</header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>Coming Soon: Sociallgram</h1>
-    <p>Made for Bharat, By Bharat — A platform where our culture shines, our voices are heard, and our data stays home.</p>
-  </section>
+<section class="about hidden">
+    <h2>About Sociallgram</h2>
+    <p>Sociallgram is Bharat’s own social media platform where connections feel real and voices matter. Built with love in India, for the people of India — it’s time to take control of our digital future.</p>
+</section>
 
-  <!-- Mockup Image -->
-  <div class="mockup">
-    <img src="https://via.placeholder.com/800x400?text=Sociallgram+App+Preview" alt="Sociallgram App Preview">
-  </div>
-
-  <!-- About Section -->
-  <section class="about">
-    <h2>What is Sociallgram?</h2>
-    <p>Sociallgram is Bharat’s own social media platform — designed to empower our people with a place to connect, share, and grow without depending on foreign platforms. Every like, comment, and post you share stays within our own digital borders, keeping your data secure and close to home.</p>
-    <p>Our vision is to create a safe, vibrant, and inclusive space that celebrates Bharat’s diversity and gives everyone a voice. Whether you want to share your daily life, showcase your talent, or discover inspiring stories from across the country — Sociallgram is built for you.</p>
-    <p>We believe in community, creativity, and cultural pride. By joining Sociallgram, you’re not just using an app — you’re part of a movement to create a digital Bharat we can all be proud of.</p>
-
-    <div class="features">
-      <div class="feature">
-        <h3>🇮🇳 Made in Bharat</h3>
-        <p>100% developed and hosted in Bharat — keeping jobs, innovation, and technology local.</p>
-      </div>
-      <div class="feature">
-        <h3>🔒 Privacy First</h3>
-        <p>Your data belongs to you — always. No unnecessary tracking or selling your information.</p>
-      </div>
-      <div class="feature">
-        <h3>🌍 Connect & Discover</h3>
-        <p>Meet people, join communities, and discover stories from every corner of our nation.</p>
-      </div>
-      <div class="feature">
-        <h3>🎨 Creative Freedom</h3>
-        <p>Share photos, videos, and stories without restrictions on creativity and culture.</p>
-      </div>
+<section class="features hidden">
+    <h2>Why Join?</h2>
+    <div class="features-grid">
+        <div class="feature-card">
+            <h3>🇮🇳 Made in India</h3>
+            <p>Crafted for Bharat’s culture, values, and people.</p>
+        </div>
+        <div class="feature-card">
+            <h3>📸 Share Freely</h3>
+            <p>Post photos, stories, and updates without limits.</p>
+        </div>
+        <div class="feature-card">
+            <h3>🔒 Privacy First</h3>
+            <p>Your data stays safe and belongs only to you.</p>
+        </div>
+        <div class="feature-card">
+            <h3>🤝 Community</h3>
+            <p>Connect with people who share your passions.</p>
+        </div>
     </div>
-  </section>
+</section>
 
-  <!-- Footer -->
-  <footer>
-    &copy; 2025 Sociallgram — Made for Bharat, By Bharat
-  </footer>
+<section class="preview hidden">
+    <h2>Our Vision</h2>
+    <p>Here’s a sneak peek at what Sociallgram will look like.</p>
+    <img src="mockup.png" alt="Sociallgram App Preview">
+</section>
+
+<section class="cta hidden">
+    <h2>Be Part of the Change</h2>
+    <p>Sociallgram is coming soon. Join the movement and help shape the future of Indian social media.</p>
+    <a href="#">Sign Up for Updates</a>
+</section>
+
+<script>
+    // Scroll animation
+    const hiddenElements = document.querySelectorAll('.hidden');
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add('show');
+            }
+        });
+    });
+    hiddenElements.forEach(el => observer.observe(el));
+</script>
 
 </body>
 </html>
